first index version

--- a/app/views/layouts/_nav.haml
+++ b/app/views/layouts/_nav.haml
@@ -5,22 +5,22 @@
         %span
         %span
         %span
-    .navbar-menu
-      .navbar-start
-        %a.navbar-item.is-active{:href => root_path}= t("home")
-        %a.navbar-item{:href => "abouts_path"}= t("about")
-        %a.navbar-item{:href => "projects_path"}= t("projects")
-        %a.navbar-item{:href => "articles_path"}= t("articles")
-        %a.navbar-item{:href => "contacts_path"}= t("contact")
-    #navMenu.navbar-menu.is-hidden-desktop
-      %span
-        %a.navbar-item.is-active{:href => "root_path"}= t("home")
-      %span
-        %a.navbar-item{:href => "abouts_path"}= t("about")
-      %span
-        %a.navbar-item{:href => "projects_path"}= t("projects")
-      %span
-        %a.navbar-item{:href => "projects_path"}= t("articles")
-      %hr
-      %span
-        %a.navbar-item.lang{:href => "contacts_path"}= t("contact")
+    -# .navbar-menu
+    -#   .navbar-start
+    -#     %a.navbar-item.is-active{:href => root_path}= t("home")
+    -#     %a.navbar-item{:href => "abouts_path"}= t("about")
+    -#     %a.navbar-item{:href => "projects_path"}= t("projects")
+    -#     %a.navbar-item{:href => "articles_path"}= t("articles")
+    -#     %a.navbar-item{:href => "contacts_path"}= t("contact")
+    -# #navMenu.navbar-menu.is-hidden-desktop
+    -#   %span
+    -#     %a.navbar-item.is-active{:href => "root_path"}= t("home")
+    -#   %span
+    -#     %a.navbar-item{:href => "abouts_path"}= t("about")
+    -#   %span
+    -#     %a.navbar-item{:href => "projects_path"}= t("projects")
+    -#   %span
+    -#     %a.navbar-item{:href => "projects_path"}= t("articles")
+    -#   %hr
+    -#   %span
+    -#     %a.navbar-item.lang{:href => "contacts_path"}= t("contact")
