--- a/app/views/welcome/_footer.haml
+++ b/app/views/welcome/_footer.haml
@@ -6,8 +6,8 @@
           %p
             %strong= t("contact")
           %p
-            %a{:href => "tel:+525561967429"} (55) 6196 7429
+            %a{:href => "tel:+525518797136"} (55) 1879 7136
         .siret.column
           %p
-            %strong E-mail
-          %p hola@paolavaldez.com
+            %strong= t("email")
+          %p= t("email_address")
