--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -1,5 +1,6 @@
 .home-columns.columns
   .column.is-half.is-home-left-column
+    =image_tag("logo-paola-valdez.png", class: 'logo-brand animated bounce flip', alt: "Paola Valdez")
     %p Paola Valdez
   .column.has-background-blue.is-home-right-column
     .lang-choser.is-hidden-touch
