add registration controller and devise views

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:300,400|Roboto');
 @import "variables";
 
+.is-principal-button{
+  background-color: $pink
+}
+
 #hi{
   text-align: center;
 }
