add logo to navbar

--- a/app/views/abouts/index.haml
+++ b/app/views/abouts/index.haml
@@ -5,7 +5,7 @@
       .columns.is-vcentered
         .column.is-5
           %figure.image.is-6by4
-            =image_tag("pao.jpg", alt: "Luis Osnet")
+            =image_tag("pao.jpg", alt: "Paola Valdez")
         .column.is-6.is-offset-1
           %h1.title.is-2= t('hello')
           %h2.subtitle.is-4= t('job')
