--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -17,7 +17,7 @@
         %a{:href => "https://www.linkedin.com/in/paolavaldez/", target: '_blank'}= t("about_me")
       = t("or")
       = succeed "." do
-        %a{:href => "https://www.linkedin.com/in/paolavaldez/", target: '_blank'}= t("my_projects")
+        %a{:href => "/docs/Paola-Eunice-Valdez-Marcos.pdf", target: '_blank'}= t("my_projects")
     %p
       =t('freelance')
       = succeed "!" do
