add bulma extensions

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,4 +1,5 @@
 @import "bulma";
+@import 'bulma-extensions';
 @import url('https://fonts.googleapis.com/css?family=Quicksand:300,400|Roboto');
 @import "variables";
 
